# ConsoleShipsFight

./: CMakeLists.txt  GameContext.cpp  GameContext.h  ShipsGame.cpp  ShipsGame.h  arg_checker.h  direction.h  game_config.h  main.cpp  optionparser.h
game/: Game_controller.cpp  Game_controller.h  Game_stats.h  Ships_game.cpp  Ships_game.h  Turn_result.h  Turn_type.h  game_config.h  settings.h
players/: Console_player.cpp  Console_player.h  Optimal_player.cpp  Optimal_player.h  Player.cpp  Player.h  Player_factory.cpp  Player_factory.h  Random_player.cpp  Random_player.h
playfield/: Playfield.cpp  Playfield.h  direction.cpp  direction.h  point.cpp  point.h
playfield/ships/: Big_ship.cpp  Big_ship.h  Huge_ship.cpp  Huge_ship.h  Incredibly_huge_ship.cpp  Incredibly_huge_ship.h  Ship.cpp  Ship.h  Ship_type.h  Ships_factory.cpp  Ships_factory.h  Smol_ship.cpp  Smol_ship.h
ui/: ConsolePainter.cpp  ConsolePainter.h  Console_painter.cpp  Console_painter.h  IPainter.h
